# BCNN

./: CMakeLists.txt  main.cpp
NN/: CMakeLists.txt
NN/include/Networks/: AffineNetwork.hpp  ConvolutionalNetwork.hpp
NN/include/Optimizers/: AdaGrad.hpp  Adam.hpp  Momentum.hpp  NesterovMomentum.hpp  RMSProp.hpp  RMSProp_NesterovMomentum.hpp
